Ejercicio 12. Para pasar los datos de una actividad a otra se ha usado la clase aplicacion, en lugar de usar el intent para ello. Aparece comentado como se haria con intent.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -164,6 +164,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="16dp"
+        android:background="@color/black"
         android:text="@string/comprar"
         app:layout_constraintBottom_toTopOf="@+id/tvResultado"
         app:layout_constraintEnd_toEndOf="parent"
